# casync

./: meson.build
src/: meson.build
